<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/user_page"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@drawable/home_bg"
    tools:context="com.example.moo.coffeeorder.MainActivity"
    tools:showIn="@layout/app_bar_main">




    <RelativeLayout
        android:id="@+id/main_layout"
        android:layout_gravity="center"

        android:layout_width="353dp"
        android:layout_height="309dp"
        android:background="@android:color/holo_green_light"
        android:visibility="visible">

        <TextView
            android:textSize="27sp"
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="(Edit your name in settings)"
            android:textColor="@android:color/white" />

        <TextView
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            android:id="@+id/user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_name"
            android:layout_centerInParent="true"
            android:text="Membership no: 99999999"
            android:textColor="@android:color/white" />




        <TextView
            android:textSize="30sp"
            android:id="@+id/points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0/10"
            android:layout_above="@+id/free_drink"
            android:layout_alignLeft="@+id/free_drink"
            android:textColor="@android:color/white"/>
        <TextView
            android:id="@+id/free_drink"
            android:textSize="20sp"
            android:layout_marginLeft="60dp"
            android:layout_marginBottom="60dp"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/free_drink"/>
        <View
            android:layout_height="100dp"
            android:layout_width="2dp"
            android:background="@android:color/white"
            android:layout_toStartOf="@id/balance"
           android:layout_toLeftOf="@id/balance"
            android:layout_alignTop="@id/balance"
            android:layout_marginRight="10dp"
          />

        <TextView
            android:textSize="30sp"
            android:id="@+id/balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$0"
            android:layout_alignStart="@id/cash"
            android:layout_alignLeft="@id/cash"
            android:layout_alignBaseline="@+id/points"
            android:textColor="@android:color/white"/>
        <TextView
            android:id="@+id/cash"
            android:textSize="20sp"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/free_drink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/ob_cash"/>


        <ImageView
            android:layout_margin="10dp"
            android:id="@+id/icon2"
            android:layout_width="48dp"
            android:layout_height="40dp"
            android:contentDescription="@string/settings"
            android:src="@drawable/ic_set"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:onClick="openSet"/>

    </RelativeLayout>
</FrameLayout>